# ChangeLog for app-office/1C_Enterprise-server
# Copyright 2002-2011 Gentoo Foundation; Distributed under the GPL v2

*net-misc/haspd-3.2.7.ebuild

  20 Sep 2011; Dmitry 'daks' Fomenko <daks12@gmail.com>
  Initial import. Based on JohnRDoe63 <johnrdoe63@cregion.ru> ebuild.