@@ -1,16 +1,15 @@
-AUX aksusbd 383 RMD160 5e4dd6dd7e7178ad3520bb5323797e45dca32cb9 SHA1 df82ad017c42fd3c70865ea45fe4068c8bedd2d1 SHA256 1f504bd78e5db33e42e2e811d5b640dfe1c3900c69f17c4979c0694b379330ec
-AUX aksusbd.conf 414 RMD160 0467da94aac8a29d5bdc398083f9253df213f580 SHA1 67a0d62a3ea87ac53b7ad753b6ab04924d7768c1 SHA256 d22e74e2402c6642076ae226489d3097344772554d2e40453949e4f7b61593e3
-AUX hasplm 434 RMD160 a9f15bd3b7e95881831c377bbaaedd0b75fd5754 SHA1 bd9785dbad3ab6c63500b458460c1de25eed62c4 SHA256 a271e704d3df657246fec0d2ed6d9a7efd5e93c965399ee59bc5e400744cb0bd
-AUX hasplm.conf 40 RMD160 a54578ba61ba3ca0e96fa23316eb78862cad8964 SHA1 6948619ad310b9f9403e2fc7b883e0568671917b SHA256 747eb34352d12413c9d4780d8acb26c678411d2c7a629331154bca74fb9fa51f
-AUX hasplmd 413 RMD160 ec00c9e0c14cdb289d1609fe1630dd2875f62feb SHA1 88a9681c62cbbeda4068dc3c04f82c63932c1145 SHA256 c134fa2e8bea2fb513187f139f17b2944589392cfb671acd826f4d2badafb182
-AUX hasplmd.conf 18 RMD160 7f5bc5aa17183ac2b6da6e4ccedfee31d8d999f9 SHA1 11ec0bf20617e7b9cfca07256980254fa8297d5b SHA256 3ad79d5be0651ed26b6da361d0146f92bdfcb2fe479196423e94b7ce617b21a2
-AUX sentinel 608 RMD160 50abb61e71c4956415125b8963d610a76b470979 SHA1 4ba61570bfaa6b2d4a504590e90de29991524c90 SHA256 722dedf342298a85ec71bafbae41f839b6563f692544dffbf95ee3edd43fbdd7
-AUX skeyd 429 RMD160 c110d782ea820247f313d9e370fb2c2d2fd0b9ae SHA1 7490db5695af20f4eece68ede9cb16ce6497c329 SHA256 5f4ce3e222f3bf2187667b8530c9867eac2e33fcd8334b4563e36b1bc65ecd2d
-AUX skeyd.conf 71 RMD160 efd7f74ebf85375263a437f8ef4377dd465980ed SHA1 c787f9a7c634ff128902aceb36fdf14a0e3c27e4 SHA256 5abf627105917fcf28692fe51242c30f1c32ad692d133cc4e273f6fb4747a593
-AUX winehasp 415 RMD160 7b446b4ba0446251c5e656f1c31c0d7951f9070c SHA1 8c77f9657aaf3a3a78f59254438682dbd7c3b76a SHA256 e09735c2461c581fed40090dc48df53790af8ee4ebdd69b1498a790bbb0835d2
-AUX winehasp.conf 114 RMD160 08a894fbe24b8232a87d0749e168653eaa15b1b5 SHA1 d2588dc943859ad353d0116147c1ef1195a0a8f2 SHA256 063395a11f91ae44f3deb738761fa0eb1956ef844da3d76b8ee11c1235325710
-DIST haspd-3.2-eter10gentoo.i586.tar.bz2 2197119 RMD160 c8df1b841dec57525f834fdaa79ee6250b5928ef SHA1 6bc3cf591f39b26001d6ee105d8faa2b5a8d7bb6 SHA256 5c831ea0e87b565aed40d5fd86288ad38e1aa5df08139d6079c7b45a488a03c4
-DIST haspd-modules-3.2-eter10gentoo.i586.tar.bz2 56592 RMD160 57e8454774c62f582ce5fe8397e4daf36a2537b6 SHA1 5f9ba20e0c54afc2ab97dd75aaa27e92d40890bd SHA256 4ec4f08e0231b4432063e83d9fb1572d4ffd45c50ca37227dd8fadff11db0e5e
-EBUILD haspd-3.2.10.ebuild 3289 RMD160 9aa3851096abf0ea656aa50ff9444e605f7f12be SHA1 24221ccc8ecd0750bdc084246b7afa9cc5bde0d1 SHA256 4b9d5ad34d4c0e174e7ea84c81f76b984eee958b30f14dd2e5f8c7722a0f60c8
-MISC ChangeLog 275 RMD160 5298eab9ebf4a9bd483f5c5c47d23aaa317ab4d7 SHA1 4a35f0aafd10967f78dfa50751318ea3b7034732 SHA256 c27bd29d388fc8edbf75ac585e9b70e601eb0b95291cc9efe4469d221ae0cb26
+AUX aksusbd 377 RMD160 ccafec2969c2c40fbd2f9dbc241837104b42f94e SHA1 a1f50d90e04cbafdcf4f111710ca9ad188de6a30 SHA256 0e208a11fb1f59d8c9579a4b01f1442c346ec1b6076d0e5d4ccf1e17330067af
+AUX aksusbd.conf.d 414 RMD160 0467da94aac8a29d5bdc398083f9253df213f580 SHA1 67a0d62a3ea87ac53b7ad753b6ab04924d7768c1 SHA256 d22e74e2402c6642076ae226489d3097344772554d2e40453949e4f7b61593e3
+AUX hasplm 379 RMD160 5104538a8aedeaf4bacda8cbc42b9b41d567452e SHA1 0676a92b59d39d5836dfe4b0fa87c91c93427184 SHA256 e016ca5632f888c92f2cc682427a5c76cbae5194352185d57579354b097f4ac8
+AUX hasplm.conf.d 40 RMD160 a54578ba61ba3ca0e96fa23316eb78862cad8964 SHA1 6948619ad310b9f9403e2fc7b883e0568671917b SHA256 747eb34352d12413c9d4780d8acb26c678411d2c7a629331154bca74fb9fa51f
+AUX hasplmd 377 RMD160 958b6d0529b52a9c4404f2e73b2d5299db57066f SHA1 aef025f9703a836e4cd589a6652375de4e8c394e SHA256 b058f697b7be92c35e8b510431f41131fe54c110c43216cecafb10ca82a2c284
+AUX hasplmd.conf.d 18 RMD160 7f5bc5aa17183ac2b6da6e4ccedfee31d8d999f9 SHA1 11ec0bf20617e7b9cfca07256980254fa8297d5b SHA256 3ad79d5be0651ed26b6da361d0146f92bdfcb2fe479196423e94b7ce617b21a2
+AUX sentinel 631 RMD160 e71f409ac5b3255c2d8c29024d00bc910005a0ad SHA1 a4d73bb88729d6eaacc995ea84e4b8efc2587fbe SHA256 34baaf089e8eb4c845a15367091134b95f2973ee3366779acfffe66b499f6488
+AUX skeyd 382 RMD160 1ba819207bf0b9f7f5003299c98e446ec935f46a SHA1 91815b6fe972c36b64a0299debca2a8f11d487a8 SHA256 bf5bd7bba2dfa7a57e3e33de87d17d2c81420381794c73da7643a9acc61a3472
+AUX skeyd.conf.d 71 RMD160 efd7f74ebf85375263a437f8ef4377dd465980ed SHA1 c787f9a7c634ff128902aceb36fdf14a0e3c27e4 SHA256 5abf627105917fcf28692fe51242c30f1c32ad692d133cc4e273f6fb4747a593
+AUX winehasp 396 RMD160 6c973f1a689f634cdba6b9cbf348b4e06600d96e SHA1 daf96e19a38dd7210072472e7714db65440bdb20 SHA256 d7305d80c75b216ca882ee9226793e274c6ae784f37bc377bd960df5310c283e
+AUX winehasp.conf.d 121 RMD160 4572ce9e95f91bfad219c992babbe749a48dc5b5 SHA1 e04539331ae453ce4abac864c71bd10d7749e1d5 SHA256 9287c4194e64c915c9a435a1171f152b826fa06159f6af7f92ee915e90fc5ca0
+DIST haspd-3.2-eter10gentoo.src.rpm 3567162 RMD160 efab60114b02c49db7c8d647ea2855fce8aef6ea SHA1 d80538918eb89657b39150cf2d384a349faf1c7a SHA256 fb7b778246f285c654a7862761ef46a3904b6d542bfba6e2dd5c6c208a70b6d2
+EBUILD haspd-3.2.10-r1.ebuild 4360 RMD160 fef49a02d52af192ed98e416b7ca055d883cebf8 SHA1 4f7eb8cf56ea385dec723b2ce9dbe76c2a3ab259 SHA256 5226004e476488fdc66dd7eeb33807172db6774e2a3cc4a2c9201aba2acf7877
+MISC ChangeLog 500 RMD160 abf49774d32b7d930bf32177195dbc668810e4cf SHA1 1f1f86ecb0640f62daba0e37a1648a30928e7174 SHA256 0efcf521bf15f501b2e3baeeb03f77ecaf5898ce54ad70860aeeef0c1f868919
 MISC metadata.xml 746 RMD160 7ccaa81b3ed47626fedc3027c5bd6f1b406ba2f6 SHA1 6220818e663243d45bf0e956e563a3c1e62a60ed SHA256 d465c4900e79f69c30561341127c0adcf03e34405b9b89b1f30518a9f3dcaad4
