@@ -1,5 +1,5 @@
 #!/sbin/runscript
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
 depend () {
@@ -9,14 +9,16 @@ depend () {
 
 start() {
 	ebegin "Starting Sentinel keys daemon"
-	eval start-stop-daemon --start --quiet --exec /opt/lib/sentinel/usbsentinel
-	eval start-stop-daemon --start --quiet --exec /opt/lib/sentinel/SntlKeysSrvrlnx
+	eval start-stop-daemon --start --quiet --exec /opt/lib/sentinel/usbdaemon
+	eend $?
+	eval start-stop-daemon --start --quiet --exec /opt/lib/sentinel/server/SntlKeysSrvrlnx
 	eend $?
 }
 
 stop() {
 	ebegin "Stopping Sentinel keys daemon"
-	eval start-stop-daemon --stop --quiet --exec /opt/lib/sentinel/usbsentinel
-	eval start-stop-daemon --stop --quiet --exec /opt/lib/sentinel/SntlKeysSrvrlnx
+	eval start-stop-daemon --stop --quiet --exec /opt/lib/sentinel/usbdaemon
+	eend $?
+	eval start-stop-daemon --stop --quiet --exec /opt/lib/sentinel/server/SntlKeysSrvrlnx
 	eend $?
 }
