@@ -1,20 +1,18 @@
 #!/sbin/runscript
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
+command="/opt/sbin/skeyd"
+command_args="${SKEYD_ARGS}"
+description="Smartkey 3 USB/LPT driver"
+
+if [ "${RC_VERSION:-0}" = "0" ]; then
+        start() {
+		eerror "This script cannot be used for baselayout-1."
+		return 1
+	}
+fi
+
 depend () {
-    need net
-    after aksusbd
-}
-
-start() {
-	ebegin "Starting Smartkey 3 USB/LPT driver"
-	eval start-stop-daemon --start --quiet --exec /opt/sbin/skeyd
-	eend $?
-}
-
-stop() {
-	ebegin "Starting Smartkey 3 USB/LPT driver"
-	eval start-stop-daemon --stop --quiet --exec /opt/sbin/skeyd
-	eend $?
+    need net aksusbd
 }
