@@ -1,20 +1,18 @@
 #!/sbin/runscript
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
+command="/opt/sbin/winehasp"
+command_args="${WINEHASP_ARGS}"
+description="Daemon for support HASP from wine"
+
+if [ "${RC_VERSION:-0}" = "0" ]; then
+        start() {
+		eerror "This script cannot be used for baselayout-1."
+		return 1
+	}
+fi
+
 depend () {
-    need net
-    after aksusbd 
-}
-
-start() {
-	ebegin "Starting Wine HASP support"
-	eval start-stop-daemon --start --quiet --exec /opt/sbin/winehasp
-	eend $?
-}
-
-stop() {
-	ebegin "Stopping Wine HASP support"
-	start-stop-daemon --stop --quiet --exec /opt/sbin/winehasp
-	eend $?
+    need net aksusbd
 }
