@@ -2,4 +2,4 @@
 # -user <user>    run as user
 # -u    <user>    run as user
 
-WINEHASP_ARGS=""
+WINEHASP_ARGS="-p 2223"
